# MonteCarlo

./: .gitignore  README.md  pyproject.toml  run_services.sh
app/: APPLE_PROJECT_GUIDE.md  README.md  __init__.py  mc_dcf_apple.py  streamlit_app.py  test_triangular.py
app/core/: __init__.py  analytics.py  dcf.py  distributions.py  simulate.py  types.py  validation.py
app/tests/: __init__.py  test_distributions.py  test_simulate.py
app/ui/: controls.py  plots.py
docs/: APPLE_PROJECT_GUIDE.md  CURSOR_PROMPT.md  DCF_CODE_GUIDE.md  DCF_VALUATION_CODE.py  GITHUB_SETUP_TUTORIAL.md  METHODOLOGY_EXPLANATION.md  MONTE_CARLO_SIMULATION_CODE.md  README.md  REPOSITORY_STRUCTURE.md  SIMULATION_CODE.py
examples/: __init__.py  estimate_pi.py  portfolio_risk.py
notebooks/: intro_monte_carlo.ipynb
src/montecarlo/: __init__.py  api.py  cli.py  core.py  distributions.py  viz.py
src/montecarlo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_api.py  test_core.py  test_distributions.py
ui/: __init__.py  streamlit_app.py
